correct dates on prototypes

--- a/app/views/medical_assessment/index.html
+++ b/app/views/medical_assessment/index.html
@@ -59,8 +59,14 @@
                 <div class="moj-timeline__header">
                     <h2 class="moj-timeline__title">Changes needed for next iteration</h2>
                 </div>
+                  <p class="moj-timeline__date">
+                    <time datetime="2020-08-28T00:00:00.000Z">21 September 2020</time>
+                </p>
+                  <div class="moj-timeline__description">
+                    <p>List of changes that might be needed in the next iteration of the prototype</p> 
                 <a class="govuk-button" href="https://github.com/dxw/moj-ppud-prototypes/blob/main/app/assets/files/pdf-prototypes/medical-assessment-changes.png">View</a>
-            </div>
+                  </div>
+                  </div>
             
             
             <div class="moj-timeline__item">
@@ -68,7 +74,7 @@
                     <h2 class="moj-timeline__title">Apply for admitting an offender in prison or custody to hospital for mental health treatment (HTML)</h2>
                 </div>
                 <p class="moj-timeline__date">
-                    <time datetime="2020-08-28T00:00:00.000Z">28 August 2020</time>
+                    <time datetime="2020-08-28T00:00:00.000Z">21 September 2020</time>
                 </p>
                 <div class="moj-timeline__description">
                     <p>Test the process of a responsible clinician informing MHCS about the need to divert an offender in prison or custody to a hospital for mental health treatment</p>
