--- a/app/views/mh_transfer/index.html
+++ b/app/views/mh_transfer/index.html
@@ -43,9 +43,9 @@ They can read an overview of  the reasons for the transfer, where they’ll be c
             What we learned
         </h2>
        <ul class="govuk-list govuk-list--bullet">
-           <li>Task list - determining risks</li>
-           <li>surfacing info + docs</li>
-           <li>Patterns worked well</li>
+           <li>To assessing the risk of a transfer a linear task list was getting in the way. The second iteration worked better, although there are parts that need revisiting.</li>
+           <li>Surfacing key information was useful, but every participant looked at the documents. One shouldn't replace the other.</li>
+           <li>It worked well to have documents in both the 'documents' section and next to the overview of the section (ie. offender's history, having the PNC file in there but also in the 'documents' section).</li> 
         </ul>
         
         <h2 class="govuk-heading-m">
@@ -91,10 +91,15 @@ A clear example is: task 4 run the risk assessment. They are doing that task con
                             </thead>
                             <tbody class="govuk-table__body">
                                 <tr class="govuk-table__row">
+                                    <td class="govuk-table__cell">Change</td>
+                                    <td class="govuk-table__cell">Why we made it</td>
+                                </tr>
+
+                                <tr class="govuk-table__row">
                                     <td class="govuk-table__cell">Split the risk assessment decision into a separate step</td>
                                     <td class="govuk-table__cell">Because it was confusing for participants to have it next to the offender’s history</td>
                                 </tr>
-
+                                
                                 <tr class="govuk-table__row">
                                     <td class="govuk-table__cell">Added end of sentence date</td>
                                     <td class="govuk-table__cell">It was missing</td>
