--- a/app/views/mh_transfer/index.html
+++ b/app/views/mh_transfer/index.html
@@ -43,7 +43,7 @@ They can read an overview of  the reasons for the transfer, where they’ll be c
             What we learned
         </h2>
        <ul class="govuk-list govuk-list--bullet">
-           <li>To assessing the risk of a transfer a linear task list was getting in the way. The second iteration worked better, although there are parts that need revisiting.</li>
+           <li>To assess the risk of a transfer a linear task list was getting in the way. The second iteration worked better, although there are parts that need revisiting.</li>
            <li>Surfacing key information was useful, but every participant looked at the documents. One shouldn't replace the other.</li>
            <li>It worked well to have documents in both the 'documents' section and next to the overview of the section (ie. offender's history, having the PNC file in there but also in the 'documents' section).</li> 
         </ul>
