added headings to table

--- a/app/views/mh_transfer/index.html
+++ b/app/views/mh_transfer/index.html
@@ -84,15 +84,15 @@ They can read an overview of  the reasons for the transfer, where they’ll be c
                         <table class="govuk-table">
                             <thead class="govuk-table__head">
                                 <tr class="govuk-table__row">
-                                <th scope="col" class="govuk-table__header">Deleted task list</th>
-                                <th scope="col" class="govuk-table__header">The structure of the prototype is currently shaped by a linear task list, but we’ve learned that the process is not always linear, and they cross reference different information to do the assessment of the transfer.
-A clear example is: task 4 run the risk assessment. They are doing that task constantly as they go through the documentation.</th>
+                                <th scope="col" class="govuk-table__header">Change</th>
+                                <th scope="col" class="govuk-table__header">Why we made it</th>
                                 </tr>
                             </thead>
                             <tbody class="govuk-table__body">
                                 <tr class="govuk-table__row">
-                                    <td class="govuk-table__cell">Change</td>
-                                    <td class="govuk-table__cell">Why we made it</td>
+                                    <td class="govuk-table__cell">Deleted task list</td>
+                                    <td class="govuk-table__cell">The structure of the prototype is currently shaped by a linear task list, but we’ve learned that the process is not always linear, and they cross reference different information to do the assessment of the transfer.
+A clear example is: task 4 run the risk assessment. They are doing that task constantly as they go through the documentation.</td>
                                 </tr>
 
                                 <tr class="govuk-table__row">
