--- a/app/views/recall/index.html
+++ b/app/views/recall/index.html
@@ -18,17 +18,41 @@
         Managing a recall for a previous offender
       </h1>
 
-        <p class="govuk-body">We decided to focus on...</p>
+        <h2 class="govuk-heading-m">
+            What we did
+        </h2>
+        <p class="govuk-body">We focused on 2 key steps: initiate a recall and assess a recall.</p>
+        <p class="govuk-body">We looked at the cases where that recall is initiated, processed by the PPCS, involved parties are informed of the revocation order, and then the offender is either unlawfully at large, or is brought back into custody.</p>
+        
+        <h4 class="govuk-heading-s">Initiate a recall - Community Offender Managers</h4>
+        <p class="govuk-body">Currently Community offender managers have to fill in an 8 pages form (PART A) to initiate a recall. <br>
+We designed an online form that automatically pulls some data about the offender, and the Community offender manager can send it to their senior manager to sign the recall off.</p>
+        
+         <h4 class="govuk-heading-s">Assess a recall - PPCS team</h4>
+        <p class="govuk-body">PPCS caseworkers will receive this request on their to-do list, with all the information and data available to assess the recall and communicate the decision to all the parties involved.</p>
 
         <h2 class="govuk-heading-m">
-            Questions we asked
+            What we didn't do
         </h2>
-        <p class="govuk-body">...</p>
+        
+       <ul class="govuk-list govuk-list--bullet">
+         <li>Parole Board reviews. We left them out of scope for this Sprint because we have enough learnings on that process and needs from the investigations done in the Release sprints.</li>
+         <li>Rethinking the process to initiate a recall, as this will need a discovery. We’ve focussed our efforts on improving and simplifying this step as much as we could so the migration is feasible.</li>
+       </ul>
 
         <h2 class="govuk-heading-m">
             What we learned
         </h2>
-        <p class="govuk-body">...</p>
+        
+        <h2 class="govuk-heading-m">
+            To explore further
+        </h2>
+        
+        <p class="govuk-body">Regardless of their role or band, people largely need access to the same information about a recall (although for different purposes)
+
+This currently makes the recall process have more unique stages than a future state may require. When PPUD is replaced there may be the need for only minimal (or potentially no) rekeying or manual cross-referencing of information.
+
+This creates a good opportunity to explore teams/roles and where people could spend their time on more useful activities</p>
 
 
         <h2 class="govuk-heading-m">
@@ -38,7 +62,7 @@
       <div class="moj-timeline">
         <div class="moj-timeline__item">
             <div class="moj-timeline__header">
-                <h2 class="moj-timeline__title">Assess emergency recall prototype v1 (HTML)</h2>
+                <h2 class="moj-timeline__title">Assess an emergency recall v1 (HTML)</h2>
             </div>
             <p class="moj-timeline__date">
                 <time datetime="2020-08-28T00:00:00.000Z">8 September 2020</time>
@@ -64,7 +88,7 @@
         </div>
         <div class="moj-timeline__item">
             <div class="moj-timeline__header">
-                <h2 class="moj-timeline__title">Start a recall prototype v1 (HTML)</h2>
+                <h2 class="moj-timeline__title">Initiate a recall v1 (HTML)</h2>
             </div>
             <p class="moj-timeline__date">
                 <time datetime="2020-08-28T00:00:00.000Z">28 August 2020</time>
