--- a/app/views/recall/index.html
+++ b/app/views/recall/index.html
@@ -44,6 +44,16 @@ We designed an online form that automatically pulls some data about the offender
             What we learned
         </h2>
         
+        <ul class="govuk-list govuk-list--bullet">
+          <li>Pulling data where possible keeps proving useful and time saving but expectations are based on past experiences.
+In order to  feel confident when making a decision, participants still wanted control and being able to see as much information as possible, not just what was surfaced for them.
+</li>
+          <li>Fewer steps and reuse of data will bring more consistency 
+to recall requests. For it to work the interface needs to signal to users where the information comes from and explain what they don’t need to do anymore.
+</li>
+          <li>Decisions that rely on people having a conversation are hard to standardise. The interface should collect clear explanations with the right metadata.</li>
+        </ul>
+        
         <h2 class="govuk-heading-m">
             To explore further
         </h2>
