--- a/app/views/mh_transfer/index.html
+++ b/app/views/mh_transfer/index.html
@@ -21,10 +21,10 @@
         <h2 class="govuk-heading-m">
             What we did
         </h2>
-        <p class="govuk-body">To request a prisoner transfer to a hospital, the prison has to fill in an H form and send it to MHCS to assess the risk of this transfer and issue a warrant.<br>
-<a href="https://github.com/dxw/moj-ppud-prototypes/blob/main/app/assets/files/pdf-prototypes/h-form-data.png" class="govuk-link">Here’s</a> a list of what the H form asks for and where that data could be pulled from.
+        <p class="govuk-body">To request a prisoner transfer to a hospital, the prison has to fill in an H form and send it to MHCS to assess the risk of this transfer and issue a warrant.</p>
+<p class="govuk-body"><a href="https://github.com/dxw/moj-ppud-prototypes/blob/main/app/assets/files/pdf-prototypes/h-form-data.png" class="govuk-link">Here’s</a> a list of what the H form asks for and where that data could be pulled from.</p>
 
-We prototyped what a request would look like if it was completed on a digital form. MHCS teams will have a to do list where they can see new and in-progress cases. They’ll also be able to see the completed ones without having to manually check NOMIS.
+ <p class="govuk-body">We prototyped what a request would look like if it was completed on a digital form. MHCS teams will have a to do list where they can see new and in-progress cases. They’ll also be able to see the completed ones without having to manually check NOMIS.
 
 They can read an overview of  the reasons for the transfer, where they’ll be cared for and the offender’s history. With all the documents for this case. 
 </p>
