added initiate recall v2

--- a/app/views/recall/index.html
+++ b/app/views/recall/index.html
@@ -96,6 +96,21 @@ This creates a good opportunity to explore teams/roles and where people could sp
                 
             </div>
         </div>
+          
+        <div class="moj-timeline__item">
+            <div class="moj-timeline__header">
+                <h2 class="moj-timeline__title">Initiate a recall v2 (HTML)</h2>
+            </div>
+            <p class="moj-timeline__date">
+                <time datetime="2020-08-28T00:00:00.000Z">9 September 2020</time>
+            </p>
+            <div class="moj-timeline__description">
+                <p>Screen to split the form into 'about the offender' and 'about the recall'</p>
+                <a class="govuk-button" href="https://github.com/dxw/moj-ppud-prototypes/blob/main/app/assets/files/pdf-prototypes/initiate-a-recall-v2.png">View</a>
+           
+            </div>
+        </div>
+          
         <div class="moj-timeline__item">
             <div class="moj-timeline__header">
                 <h2 class="moj-timeline__title">Initiate a recall v1 (HTML)</h2>
