--- a/app/views/recall/index.html
+++ b/app/views/recall/index.html
@@ -64,7 +64,7 @@ to recall requests. For it to work the interface needs to signal to users where 
                <li>reason for the recall</li>
                <li>type of recall</li>
                <li>sentence details</li>
-               <li>Risk (OASys)</li>
+               <li>risk (OASys)</li>
               </ul>
               Worth noting that some wanted to see vulnerability issues and history of recalls. </li>
             <li>Regardless of their role or band, people largely need access to the same information about a recall (although for different purposes). This currently makes the recall process have more unique stages than a future state may require. When PPUD is replaced there may be the need for only minimal (or potentially no) rekeying or manual cross-referencing of information. 
