--- a/app/views/medical_assessment/index.html
+++ b/app/views/medical_assessment/index.html
@@ -57,7 +57,7 @@
             
               <div class="moj-timeline__item">
                 <div class="moj-timeline__header">
-                    <h2 class="moj-timeline__title">Changes needed for next iteration</h2>
+                    <h2 class="moj-timeline__title">Changes needed for next iteration (PNG)</h2>
                 </div>
                   <p class="moj-timeline__date">
                     <time datetime="2020-08-28T00:00:00.000Z">21 September 2020</time>
