Add discovery report link

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -37,6 +37,10 @@
     <h3 class="govuk-heading-m">Technical report</h3>
     <p class="govuk-body"></p>
     <p class="govuk-body"><a href="#" class="govuk-link">View</a></p>
+
+    <h3 class="govuk-heading-m">Discovery report</h3>
+    <p class="govuk-body"></p>
+    <p class="govuk-body"><a href="https://drive.google.com/file/d/1Cu97tAYHvQsNyQwhSaYzU-f612icRmRy/view?usp=sharing" class="govuk-link">View</a></p>
   </div>
 </div>
 
