Change links to files on GitHub to relative paths
This is so that they'll be opened directly in the browser rather than
within GitHub itself.

--- a/app/views/medical_assessment/index.html
+++ b/app/views/medical_assessment/index.html
@@ -64,7 +64,7 @@
                 </p>
                   <div class="moj-timeline__description">
                     <p>List of changes that might be needed in the next iteration of the prototype</p> 
-                <a class="govuk-button" href="https://github.com/dxw/moj-ppud-prototypes/blob/main/app/assets/files/pdf-prototypes/medical-assessment-changes.png">View</a>
+                <a class="govuk-button" href="/public/files/pdf-prototypes/medical-assessment-changes.png">View</a>
                   </div>
                   </div>
             
