--- a/app/views/mh_transfer/index.html
+++ b/app/views/mh_transfer/index.html
@@ -72,7 +72,7 @@ They can read an overview of  the reasons for the transfer, where they’ll be c
                 </p>
                 <div class="moj-timeline__description">
                     <p></p>
-                    <a class="govuk-button" href="https://github.com/dxw/moj-ppud-prototypes/blob/main/app/assets/files/pdf-prototypes/mhcs-move-to-hospital-v2.pdf">View</a>
+                    <a class="govuk-button" href="/public/files/pdf-prototypes/mhcs-move-to-hospital-v2.pdf">View</a>
                 </div>
                 <details class="govuk-details govuk-!-margin-bottom-0">
                     <summary class="govuk-details__summary">
@@ -124,7 +124,7 @@ A clear example is: task 4 run the risk assessment. They are doing that task con
                 </p>
                 <div class="moj-timeline__description">
                     <p></p>
-                    <a class="govuk-button" href="https://github.com/dxw/moj-ppud-prototypes/blob/main/app/assets/files/pdf-prototypes/mhcs-move-to-hospital-v1.pdf">View</a>
+                    <a class="govuk-button" href="/public/files/pdf-prototypes/mhcs-move-to-hospital-v1.pdf">View</a>
                 </div>
      
                 
