--- a/app/views/recall/index.html
+++ b/app/views/recall/index.html
@@ -122,7 +122,7 @@ This creates a good opportunity to explore teams/roles and where people could sp
             </p>
             <div class="moj-timeline__description">
                 <p>Test the process of PPCS assessing an emergency recall</p>
-                <a class="govuk-button" href="https://github.com/dxw/moj-ppud-prototypes/blob/main/app/assets/files/pdf-prototypes/ppcs-recall-v1.pdf">View</a>
+                <a class="govuk-button" href="/public/files/pdf-prototypes/ppcs-recall-v1.pdf">View</a>
                 
             </div>
         </div>
@@ -150,7 +150,7 @@ This creates a good opportunity to explore teams/roles and where people could sp
             </p>
             <div class="moj-timeline__description">
                 <p>Screen to split the form into 'about the offender' and 'about the recall'</p>
-                <a class="govuk-button" href="https://github.com/dxw/moj-ppud-prototypes/blob/main/app/assets/files/pdf-prototypes/initiate-a-recall-v2.png">View</a>
+                <a class="govuk-button" href="/public/files/pdf-prototypes/initiate-a-recall-v2.png">View</a>
            
             </div>
         </div>
