Add days input to minimum term and remand duration

--- a/app/views/release/case/calculate-tariff-expiration-date.html
+++ b/app/views/release/case/calculate-tariff-expiration-date.html
@@ -49,6 +49,10 @@
             {
               classes: "govuk-input--width-2",
               name: "months"
+            },
+            {
+              classes: "govuk-input--width-2",
+              name: "days"
             }
           ]
         }) }}
@@ -73,6 +77,10 @@
             {
               classes: "govuk-input--width-2",
               name: "months"
+            },
+            {
+              classes: "govuk-input--width-2",
+              name: "days"
             }
           ]
         }) }}
