--- a/app/views/release/index.html
+++ b/app/views/release/index.html
@@ -120,6 +120,10 @@
                             </thead>
                             <tbody class="govuk-table__body">
                                 <tr class="govuk-table__row">
+                                    <td class="govuk-table__cell">Add an input for days when providing minimum term and time spent in remand</td>
+                                    <td class="govuk-table__cell">These dates are sometimes provided as number of days only or combination of months and days</td>
+                                </tr>
+                                <tr class="govuk-table__row">
                                     <td class="govuk-table__cell">Include time spent in remand</td>
                                     <td class="govuk-table__cell">This is required as it is subtracted from the minimum term</td>
                                 </tr>
