--- a/app/views/release/index.html
+++ b/app/views/release/index.html
@@ -17,13 +17,29 @@
       <h1 class="govuk-heading-xl">
         Manage a parole review
       </h1>
-      <p class="govuk-body">We decided to focus on...</p>
-
+      
       <h2 class="govuk-heading-m">
-        Questions we asked
+        What we did
       </h2>
+      <h4 class="govuk-heading-s">PPCS - Calculate tariff expiry date</h4>
       <p class="govuk-body">...</p>
 
+        <h4 class="govuk-heading-s">PPCS - Collect documents for the dossier </h4>
+      <p class="govuk-body">...</p>
+        
+        <h4 class="govuk-heading-s">MCA - Check documents for the Parole Board</h4>
+      <p class="govuk-body">...</p>
+
+        <h2 class="govuk-heading-m">
+        What we didn't do
+      </h2>
+        <p class="govuk-body">...</p>
+        
+         <h2 class="govuk-heading-m">
+        To explore further
+      </h2>
+        <p class="govuk-body">...</p>
+        
       <h2 class="govuk-heading-m">
         What we learned
       </h2>
