--- a/app/views/release/index.html
+++ b/app/views/release/index.html
@@ -25,20 +25,30 @@
       <p class="govuk-body">...</p>
 
         <h4 class="govuk-heading-s">PPCS - Collect documents for the dossier </h4>
-      <p class="govuk-body">...</p>
+      <p class="govuk-body">Currently PPCS collects and chases all the documents via email, that they need to then manually upload on PPUD.</p>
+      <p class="govuk-body">We tested prototypes that will help them check and collect the right documentation.</p>
         
         <h4 class="govuk-heading-s">MCA - Check documents for the Parole Board</h4>
-      <p class="govuk-body">...</p>
+      <p class="govuk-body">Currently MCA has to manually check on PPUD the dossiers, with lots of back and forth emails with PPCS.</p> 
+      <p class="govuk-body">We tested some prototypes to simplify their workflow and help MCA caseworkers verify the documentation and refer cases, so the Parole Board has the right information</p>
 
         <h2 class="govuk-heading-m">
         What we didn't do
       </h2>
-        <p class="govuk-body">...</p>
+       <ul class="govuk-list govuk-list--bullet">
+        <li>..</li>
+         <li></li>
+         <li>pears</li>
+</ul>
         
          <h2 class="govuk-heading-m">
         To explore further
       </h2>
-        <p class="govuk-body">...</p>
+        <ul class="govuk-list govuk-list--bullet">
+        <li>When surfacing key information, most participants wanted to see every document. In some cases it made sense as it helped them understand the context of the case, but in others we couldn't see a clear reason.
+            This has happened in most of the sessions and we wonder if it's a “habit”, rather than an actual need.</li>
+        <li>Test with more Community offender managers the email with a magic link to provide information and if it should be password protected or they'll need an account</li>
+        </ul>
         
       <h2 class="govuk-heading-m">
         What we learned
@@ -54,7 +64,7 @@
 
       <div class="moj-timeline__item">
             <div class="moj-timeline__header">
-                <h2 class="moj-timeline__title">Collect and track documents prototype v1 (HTML)</h2>
+                <h2 class="moj-timeline__title">PPCS - Initial Action team - Collect and track documents prototype v1 (HTML)</h2>
             </div>
             <p class="moj-timeline__date">
                 <time datetime="2020-08-19T00:00:00.000Z">24 August 2020</time>
@@ -69,7 +79,7 @@
         
         <div class="moj-timeline__item">
             <div class="moj-timeline__header">
-                <h2 class="moj-timeline__title">Check documentation prototype v1 (HTML)</h2>
+                <h2 class="moj-timeline__title">MCA - Check documentation prototype v1 (HTML)</h2>
             </div>
             <p class="moj-timeline__date">
                 <time datetime="2020-08-19T00:00:00.000Z">19 August 2020</time>
@@ -111,7 +121,7 @@
 
         <div class="moj-timeline__item">
             <div class="moj-timeline__header">
-                <h2 class="moj-timeline__title">Tariff expiration date calculation prototype v1 (HTML)</h2>
+                <h2 class="moj-timeline__title">PPCS - Initial action team - Tariff expiration date calculation prototype v1 (HTML)</h2>
             </div>
             <p class="moj-timeline__date">
                 <time datetime="2020-07-27T00:00:00.000Z">27 July 2020</time>
