added com prototype

--- a/app/views/release/index.html
+++ b/app/views/release/index.html
@@ -76,6 +76,19 @@
                 
             </div>
         </div>
+          
+            <div class="moj-timeline__item">
+            <div class="moj-timeline__header">
+                <h2 class="moj-timeline__title">COM receives a link to provide documents (PDF)</h2>
+            </div>
+            <p class="moj-timeline__date">
+                <time datetime="2020-08-19T00:00:00.000Z">24 August 2020</time>
+            </p>
+            <div class="moj-timeline__description">
+                <p>Test the process of providing documents **needs more research**</p>
+                <a class="govuk-button" href="/public/files/pdf-prototypes/com-provides-documents.pdf">View</a>
+            </div>
+        </div>
         
         <div class="moj-timeline__item">
             <div class="moj-timeline__header">
